# matrix_calc

./: .gitignore  CMakeLists.txt  README.md  coverage.info
.github/workflows/: ci.yml
examples/: example_1.cpp  main.cpp
include/matrix_calc/: matrix.h  matrix_ct.hpp  vector.h
include/matrix_calc/vector/: column.h  row.h
scripts/: build.sh  tests.sh
src/: column.cpp  matrix.cpp  row.cpp  vector.cpp
test/: CMakeLists.txt  Test.cpp  matrix_test.cpp  vectors_test.cpp
